@@ -1,6 +1,6 @@
 Package: oce
-Version: 0.4-1
-Date: 2011-07-21
+Version: 0.5-1
+Date: 2011-07-22
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
